--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="./src//assets/images/logo-ssism.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
-    <title>Vite + React</title>
+    <title>ITEG Management System</title>
   </head>
   <body>
     <div id="root"></div>
